--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="icon" type="image/svg+xml" href="/socialstream.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta property="og:url" content="https://socialstream.vercel.app" />
+		<meta
+			property="og:image"
+			content="https://socialstream.vercel.app/socialstream_full.png"
+		/>
+		<meta property="og:image:width" content="200" />
+		<meta property="og:image:height" content="200" />
 		<title>SocialStream</title>
 	</head>
 	<body>
